# CRUD_JN

./: README.md  exemplo00.py  pyproject.toml
src/: controller.py  db.py  main.py  models.py  pokemon.db  schema.py
